# compaREST

./: .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  action.yaml  compa4ek.cabal  compaREST.cabal  comparest.cabal  default.nix  foo.html  openapi-diff.cabal  policeman.json  stack.yaml
.github/actions/common_setup/: action.yaml
.github/actions/nix_cache/: action.yaml
.github/actions/nix_cache_post/: action.yaml  actions.yaml
.github/actions/push_docker_images/: action.yaml
.github/workflows/: github-actions-image.yaml  haskell.yml  linux-binary.yaml  remove-artifacts.yaml
app/: FormatHeuristic.hs  Main.hs
app/Data/OpenApi/Compare/: Options.hs
app/OpenAPI/Checker/: Options.hs
app/OpenApi/Checker/: Options.hs
benchmarks/: README.md  default.nix  report.md
benchmarks/atlassian/: addDist.patch
benchmarks/nix/: sources.json
benchmarks/oasdiff/: gomod2nix.toml
ci/: policeman.nix
css/: awsm.min.css
docs/: Development_guide.md  Integration_guide.md  Releasing.md  User_guide.md
github-action/: Main.hs
github-action/CompaREST/GitHub/: API.hs
github-action/CompaREST/GitHub/Action/: Config.hs
github-action/Control/Monad/Freer/: GitHub.hs
github-action/GitHub/: Extra.hs
github-action/GitHub/Data/: Checks.hs
github-action/GitHub/Endpoints/: Checks.hs
nix/: ci.nix  diff-yaml.nix  shell.nix  sources.json  yq.nix
scripts/: diff-yaml
src/: Compa4ek.hs
src/Data/: HList.hs
src/Data/OpenApi/Compare/: Behavior.hs  Common.hs  Formula.hs  Memo.hs  Orphans.hs  Paths.hs  PathsPrefixTree.hs  References.hs  Report.hs  Run.hs  Subtree.hs
src/Data/OpenApi/Compare/Report/: Jet.hs
src/Data/OpenApi/Compare/Report/Html/: Template.hs
src/Data/OpenApi/Compare/Validate/: Header.hs  Link.hs  MediaTypeObject.hs  OAuth2Flows.hs  OpenApi.hs  Operation.hs  Param.hs  PathFragment.hs  Products.hs  RequestBody.hs  Responses.hs  Schema.hs  SecurityRequirement.hs  SecurityScheme.hs  Server.hs  Sums.hs
src/Data/OpenApi/Compare/Validate/Schema/: DNF.hs  Issues.hs  JsonFormula.hs  Partition.hs  Process.hs  Traced.hs  TypedJson.hs
src/Data/OpenUnion/: Extra.hs
src/OpenAPI/: Orphans.hs
src/OpenAPI/Checker/: Aux.hs  Behavior.hs  Common.hs  Formula.hs  Memo.hs  Options.hs  Orphans.hs  Paths.hs  PathsPrefixTree.hs  References.hs  Report.hs  Run.hs  Subtree.hs  Trace.hs  TracePrefixTree.hs  Validate.hs
src/OpenAPI/Checker/Report/: Jet.hs  Orphans.hs
src/OpenAPI/Checker/Report/Html/: Template.hs
src/OpenAPI/Checker/Subtree/: Deriving.hs
src/OpenAPI/Checker/Validate/: Dereference.hs  Header.hs  Link.hs  MediaTypeObject.hs  Monad.hs  OAuth2Flows.hs  OpenApi.hs  Operation.hs  Param.hs  PathFragment.hs  PathItem.hs  ProcessedPathItem.hs  Products.hs  RequestBody.hs  Responses.hs  Schema.hs  SecurityRequirement.hs  SecurityScheme.hs  Server.hs  Sums.hs
src/OpenAPI/Checker/Validate/Schema/: DNF.hs  Issues.hs  JsonFormula.hs  Partition.hs  Process.hs  Traced.hs  TypedJson.hs
src/Text/Pandoc/Builder/: Extra.hs
test/: README.md  Spec.hs
test/Spec/Golden/: Extra.hs  Report.hs  ReportTree.hs  TraceTree.hs
test/golden/common/bad-oneof-unchanged/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/enum-added/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/enum-anyof/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/id/: report.md  trace-tree.yaml
test/golden/common/json/recursive/: a.yaml
test/golden/common/maximum-lowered/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/pathItem/operation/parameters/allowEmptyValue/reset/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/pathItem/operation/parameters/allowEmptyValue/set/: report.md  trace-tree.yaml
test/golden/common/pathItem/operation/parameters/change/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/pathItem/operation/parameters/required/reset/: report.md  trace-tree.yaml
test/golden/common/pathItem/operation/parameters/required/set/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/pathItem/operation/requestBody/mediaTypeObject/add/: report.md  trace-tree.yaml
test/golden/common/pathItem/operation/responses/add/: report.md  trace-tree.yaml
test/golden/common/pathItem/operation/responses/del/: a.yaml  report.md  trace-tree.yaml
test/golden/common/property-removed/: b.yaml  report.md  trace-tree.yaml
test/golden/common/property-removed-additional/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/property-required/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/random-example/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/recursive/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/reqbody/required/set/: trace-tree.yaml
test/golden/common/security-scheme/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/servers/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/tuple-items/heterogeneous-component-mismatch/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/tuple-items/heterogeneous-length-mismatch/: a.yaml  report.md  trace-tree.yaml
test/golden/common/tuple-items/homogeneous-component-mismatch/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/tuple-items/homogeneous-length-mismatch/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/tuple-items/homogeneous-vector/: a.yaml  trace-tree.yaml
test/golden/common/type-changing/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/unguarded-recursive/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/unguarded-recursive/basic/: trace-tree.yaml
test/golden/common/unguarded-recursive/silent/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/variant-added/: a.yaml  b.yaml  report.md  trace-tree.yaml
test/golden/common/variant-changed/: b.yaml  report.md  trace-tree.yaml
test/golden/common/variant-deep-changed/: a.yaml  b.yaml  report.md  trace-tree.yaml
testgen/: Components.hs  Main.hs  Yaml.hs
(+40 files in other folders)
