cabal-version:       2.4
name:                compa4ek
version:             0.0.0.0
synopsis:            Compatibility checker for OpenAPI
description:         Compatibility checker for OpenAPI
license:             MIT
license-file:        LICENSE
author:              Aleksey Uymanov
maintainer:          Aleksey Uymanov <s9gf4ult@gmail.com>
copyright:           2021 Aleksey Uymanov
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  build-depends:       base >= 4.12.0.0 && < 4.14
                     , aeson
                     , containers
                     , insert-ordered-containers
                     , openapi3
                     , text

  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NumDecimals
                    , OverloadedStrings
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:  OpenAPI.Checker.Report
                  , OpenAPI.Checker.Run
                  , OpenAPI.Checker.Validate
                  , OpenAPI.Checker.Validate.Monad

executable compa4ek
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       compa4ek
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite compa4ek-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       compa4ek
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
