cabal-version:       2.4
name:                compaREST
version:             0.0.0.0
synopsis:            Compatibility checker for OpenAPI
description:         Compatibility checker for OpenAPI.
license:             MIT
license-file:        LICENSE
author:              Typeable
maintainer:          compaREST@typeable.io
copyright:           2021 Typeable
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4
extra-source-files: awsm-css/dist/awsm.min.css

common common-options
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-prepositive-qualified-module
    -Wno-missing-import-lists
    -Wno-partial-fields
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-unsafe
    -fconstraint-solver-iterations=0
  default-language:    Haskell2010
  build-depends:       base >= 4.12.0.0 && < 4.16
                     , text


  default-extensions: ApplicativeDo
                    , BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DerivingStrategies
                    , DerivingVia
                    , DuplicateRecordFields
                    , EmptyDataDeriving
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NumDecimals
                    , OverloadedStrings
                    , PatternSynonyms
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns
                    , QuantifiedConstraints
                    , DefaultSignatures

library
  import:              common-options
  build-depends:
                     , pcre2
                     , open-union
                     , vector
                     , unordered-containers
                     , type-fun
                     , typerep-map
                     , tagged
                     , scientific
                     , pandoc-types
                     , openapi3
                     , lattices
                     , insert-ordered-containers
                     , http-media
                     , hashable
                     , free
                     , containers
                     , comonad
                     , attoparsec
                     , transformers
                     , mtl
                     , aeson
                     , generic-data
                     , doctemplates
                     , file-embed
                     , data-default
                     , ordered-containers
                     , bytestring
  hs-source-dirs:      src
  exposed-modules:  Data.OpenApi.Compare.Behavior
                  , Data.OpenApi.Compare.Common
                  , Data.OpenApi.Compare.Formula
                  , Data.OpenApi.Compare.Memo
                  , Data.OpenApi.Compare.Orphans
                  , Data.OpenApi.Compare.Paths
                  , Data.OpenApi.Compare.PathsPrefixTree
                  , Data.OpenApi.Compare.References
                  , Data.OpenApi.Compare.Report
                  , Data.OpenApi.Compare.Report.Html.Template
                  , Data.OpenApi.Compare.Report.Jet
                  , Data.OpenApi.Compare.Run
                  , Data.OpenApi.Compare.Subtree
                  , Data.OpenApi.Compare.Validate.Header
                  , Data.OpenApi.Compare.Validate.Link
                  , Data.OpenApi.Compare.Validate.MediaTypeObject
                  , Data.OpenApi.Compare.Validate.OAuth2Flows
                  , Data.OpenApi.Compare.Validate.OpenApi
                  , Data.OpenApi.Compare.Validate.Operation
                  , Data.OpenApi.Compare.Validate.Param
                  , Data.OpenApi.Compare.Validate.PathFragment
                  , Data.OpenApi.Compare.Validate.Products
                  , Data.OpenApi.Compare.Validate.RequestBody
                  , Data.OpenApi.Compare.Validate.Responses
                  , Data.OpenApi.Compare.Validate.Schema
                  , Data.OpenApi.Compare.Validate.Schema.DNF
                  , Data.OpenApi.Compare.Validate.Schema.Issues
                  , Data.OpenApi.Compare.Validate.Schema.JsonFormula
                  , Data.OpenApi.Compare.Validate.Schema.Partition
                  , Data.OpenApi.Compare.Validate.Schema.Process
                  , Data.OpenApi.Compare.Validate.Schema.Traced
                  , Data.OpenApi.Compare.Validate.Schema.TypedJson
                  , Data.OpenApi.Compare.Validate.SecurityRequirement
                  , Data.OpenApi.Compare.Validate.SecurityScheme
                  , Data.OpenApi.Compare.Validate.Server
                  , Data.OpenApi.Compare.Validate.Sums
  other-modules:    Data.HList
                  , Data.OpenUnion.Extra

executable compaREST
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      compaREST
    , pandoc
    , data-default
    , bytestring
    , yaml
    , filepath
    , optparse-applicative
    , mtl
    , aeson
    , containers
    , doctemplates
    , pandoc-types
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  other-modules:
    FormatHeuristic
    Data.OpenApi.Compare.Options

executable compaREST-GitHub-Action
  import:              common-options
  hs-source-dirs:      github-action
  main-is:             Main.hs
  build-depends:
      compaREST
    , pandoc
    , yaml
    , aeson
    , github
    , freer-simple
    , vector
    , pandoc-types
    , envy
    , filepath
    , bytestring
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  other-modules:
    Control.Monad.Freer.GitHub
    CompaREST.GitHub.API
    CompaREST.GitHub.Action.Config
    GitHub.Data.Checks
    GitHub.Endpoints.Checks

test-suite compaREST-tests
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Spec.Golden.Extra
    Spec.Golden.TraceTree
  build-depends:
    , compaREST
    , tasty-golden
    , tasty
    , bytestring
    , yaml
    , directory
    , filepath
    , pandoc
    , data-default
    , lens
    , pandoc-types
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
