cabal-version:       2.4
name:                openapi-diff
version:             0.0.0.0
synopsis:            Compatibility checker for OpenAPI
description:         Compatibility checker for OpenAPI
license:             MIT
license-file:        LICENSE
author:              Aleksey Uymanov
maintainer:          Aleksey Uymanov <s9gf4ult@gmail.com>
copyright:           2021 Aleksey Uymanov
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  build-depends:       base >= 4.12.0.0 && < 4.15
                     , aeson
                     , attoparsec
                     , containers
                     , deriving-aeson
                     , generic-data
                     , generic-monoid
                     , insert-ordered-containers
                     , lens
                     , mtl
                     , openapi3
                     , optparse-applicative
                     , tagged
                     , text
                     , transformers
                     , typerep-map
                     , yaml
                     , unordered-containers
                     , vector
                     , bytestring

  default-extensions: ApplicativeDo
                    , BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DerivingStrategies
                    , DerivingVia
                    , DuplicateRecordFields
                    , EmptyDataDeriving
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NumDecimals
                    , OverloadedStrings
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns
                    , QuantifiedConstraints

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:  OpenAPI.Checker.Aux
                  , Data.HList
                  , OpenAPI.Checker.Formula
                  , OpenAPI.Checker.Memo
                  , OpenAPI.Checker.Options
                  , OpenAPI.Checker.Orphans
                  , OpenAPI.Checker.References
                  , OpenAPI.Checker.Report
                  , OpenAPI.Checker.Run
                  , OpenAPI.Checker.Subtree
                  , OpenAPI.Checker.Trace
                  , OpenAPI.Checker.TracePrefixTree
                  , OpenAPI.Checker.Validate
                  , OpenAPI.Checker.Validate.Dereference
                  , OpenAPI.Checker.Validate.Monad
                  , OpenAPI.Checker.Validate.OpenApi
                  , OpenAPI.Checker.Validate.Operation
                  , OpenAPI.Checker.Validate.Param
                  , OpenAPI.Checker.Validate.PathFragment

executable openapi-diff
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       openapi-diff
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite openapi-diff-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Spec.Golden.Extra
    Spec.Golden.TraceTree
  build-depends:
    , openapi-diff
    , tasty-golden
    , tasty
    , bytestring
    , aeson
    , yaml
    , directory
    , filepath
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
