cabal-version:       2.4
name:                openapi-diff
version:             0.0.0.0
synopsis:            Compatibility checker for OpenAPI
description:         Compatibility checker for OpenAPI
license:             MIT
license-file:        LICENSE
author:              Aleksey Uymanov
maintainer:          Aleksey Uymanov <s9gf4ult@gmail.com>
copyright:           2021 Aleksey Uymanov
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

Flag static
  Default:     False
  Manual:      True

common common-options
  if flag(static)
    cc-options: -static
    ld-options: -static -pthread
    ghc-options: -static
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  build-depends:       base >= 4.12.0.0 && < 4.15
                     , aeson
                     , attoparsec
                     , bytestring
                     , containers
                     , comonad
                     , deriving-aeson
                     , generic-data
                     , generic-monoid
                     , http-media
                     , insert-ordered-containers
                     , lattices
                     , lens
                     , mtl
                     , openapi3
                     , optparse-applicative
                     , pcre2
                     , scientific
                     , tagged
                     , text
                     , transformers
                     , typerep-map
                     , unordered-containers
                     , vector
                     , yaml
                     , hashable
                     , pandoc-types
                     , open-union
                     , type-fun
                     , free

  default-extensions: ApplicativeDo
                    , BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DerivingStrategies
                    , DerivingVia
                    , DuplicateRecordFields
                    , EmptyDataDeriving
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NumDecimals
                    , OverloadedStrings
                    , PatternSynonyms
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns
                    , QuantifiedConstraints
                    , DefaultSignatures

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:  Data.HList
                  , OpenAPI.Checker.Behavior
                  , OpenAPI.Checker.Formula
                  , OpenAPI.Checker.Memo
                  , OpenAPI.Checker.Options
                  , OpenAPI.Checker.Orphans
                  , OpenAPI.Checker.Paths
                  , OpenAPI.Checker.PathsPrefixTree
                  , OpenAPI.Checker.References
                  , OpenAPI.Checker.Subtree
                  , OpenAPI.Checker.Validate.MediaTypeObject
                  , OpenAPI.Checker.Validate.OpenApi
                  , OpenAPI.Checker.Validate.Operation
                  , OpenAPI.Checker.Validate.Param
                  , OpenAPI.Checker.Validate.PathFragment
                  , OpenAPI.Checker.Validate.Products
                  , OpenAPI.Checker.Validate.RequestBody
                  , OpenAPI.Checker.Validate.Responses
                  , OpenAPI.Checker.Validate.Schema
                  , OpenAPI.Checker.Validate.SecurityRequirement
                  , OpenAPI.Checker.Validate.Server
                  , OpenAPI.Checker.Validate.Sums
                  , OpenAPI.Checker.Validate.Header
                  , OpenAPI.Checker.Validate.Link
                  , OpenAPI.Checker.Common
                  , OpenAPI.Checker.Validate.SecurityScheme
                  , OpenAPI.Checker.Validate.OAuth2Flows
                  , OpenAPI.Checker.Report
                  , Data.OpenUnion.Extra

executable openapi-diff
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      openapi-diff
    , pandoc
    , data-default
    , bytestring
    , yaml
    , filepath
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  other-modules:
    FormatHeuristic

test-suite openapi-diff-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Spec.Golden.Extra
    Spec.Golden.TraceTree
  build-depends:
    , openapi-diff
    , tasty-golden
    , tasty
    , bytestring
    , aeson
    , yaml
    , directory
    , filepath
    , pandoc
    , data-default
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
