cabal-version:       2.4
name:                openapi-diff
version:             0.0.0.0
synopsis:            Compatibility checker for OpenAPI
description:         Compatibility checker for OpenAPI
license:             MIT
license-file:        LICENSE
author:              Aleksey Uymanov
maintainer:          Aleksey Uymanov <s9gf4ult@gmail.com>
copyright:           2021 Aleksey Uymanov
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

Flag static
  Default:     False
  Manual:      True

common common-options
  if flag(static)
    cc-options: -static
    ld-options: -static -pthread
    ghc-options: -static
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-prepositive-qualified-module
    -Wno-missing-import-lists
    -Wno-partial-fields
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-unsafe
  default-language:    Haskell2010
  build-depends:       base >= 4.12.0.0 && < 4.15
                     , bytestring
                     , text

  default-extensions: ApplicativeDo
                    , BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DerivingStrategies
                    , DerivingVia
                    , DuplicateRecordFields
                    , EmptyDataDeriving
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NumDecimals
                    , OverloadedStrings
                    , PatternSynonyms
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns
                    , QuantifiedConstraints
                    , DefaultSignatures

library
  import:              common-options
  build-depends:
                     , pcre2
                     , open-union
                     , vector
                     , unordered-containers
                     , type-fun
                     , typerep-map
                     , tagged
                     , scientific
                     , pandoc-types
                     , openapi3
                     , lattices
                     , insert-ordered-containers
                     , http-media
                     , hashable
                     , free
                     , containers
                     , comonad
                     , attoparsec
                     , transformers
                     , mtl
                     , aeson
  hs-source-dirs:      src
  exposed-modules:  Data.HList
                  , OpenAPI.Checker.Behavior
                  , OpenAPI.Checker.Formula
                  , OpenAPI.Checker.Memo
                  , OpenAPI.Checker.Orphans
                  , OpenAPI.Checker.Paths
                  , OpenAPI.Checker.PathsPrefixTree
                  , OpenAPI.Checker.References
                  , OpenAPI.Checker.Subtree
                  , OpenAPI.Checker.Validate.MediaTypeObject
                  , OpenAPI.Checker.Validate.OpenApi
                  , OpenAPI.Checker.Validate.Operation
                  , OpenAPI.Checker.Validate.Param
                  , OpenAPI.Checker.Validate.PathFragment
                  , OpenAPI.Checker.Validate.Products
                  , OpenAPI.Checker.Validate.RequestBody
                  , OpenAPI.Checker.Validate.Responses
                  , OpenAPI.Checker.Validate.Schema
                  , OpenAPI.Checker.Validate.SecurityRequirement
                  , OpenAPI.Checker.Validate.Server
                  , OpenAPI.Checker.Validate.Sums
                  , OpenAPI.Checker.Validate.Header
                  , OpenAPI.Checker.Validate.Link
                  , OpenAPI.Checker.Common
                  , OpenAPI.Checker.Validate.SecurityScheme
                  , OpenAPI.Checker.Validate.OAuth2Flows
                  , OpenAPI.Checker.Report
                  , Data.OpenUnion.Extra

executable openapi-diff
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      openapi-diff
    , pandoc
    , data-default
    , bytestring
    , yaml
    , filepath
    , optparse-applicative
    , mtl
    , aeson
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  other-modules:
    FormatHeuristic
    OpenAPI.Checker.Options

test-suite openapi-diff-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Spec.Golden.Extra
    Spec.Golden.TraceTree
  build-depends:
    , openapi-diff
    , tasty-golden
    , tasty
    , bytestring
    , yaml
    , directory
    , filepath
    , pandoc
    , data-default
    , lens
    , openapi3
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
